manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lyna-sovann0964-zhznext-https-ingress
  namespace: lyna-sovann0964-zhznext
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lyna-sovann0964-zhznext.assessify.org
      secretName: lyna-sovann0964-zhznext-secret-tls
  rules:
    - host: lyna-sovann0964-zhznext.assessify.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lyna-sovann0964-zhznext-service
                port:
                  number: 8080
